--- a/CashlessData.properties
+++ b/CashlessData.properties
@@ -1,4 +1,4 @@
 userName=admin@vatebra.com
 password=password
-url=http://52.157.173.149/CashlessSchoolWeb
+url=http://xxxxxxxxxxx/CashlessSchoolWeb
 browser=chrome
